--- a/src/pages/set_net/set_net.html
+++ b/src/pages/set_net/set_net.html
@@ -8,52 +8,54 @@
                     <div class="net_item_header row">
                         <h4 class="col-md-1" style="min-width:130px">网络设备</h4>
                         <div class="col-md-3" style="max-width: 230px">
-                            <select class="form-control input_radius" style="background-color: #fff;" ng-model="net.statusData" ng-options="x.num as x.type for x in statusData"></select>
+                                <select  class="form-control input_radius" style="background-color: #fff;"
+                                ng-model="net.index" ng-options="x for x in net_names" ng-change="net_card(net.index)">
+                            </select>
                         </div>
                     </div>
                     <div class="form-group row item_form">
                         <label for="host" class="col-sm-1 control-label" style="min-width:130px">是否启用</label>
                         <div class="col-sm-6">
                             <div class="pull-left">
-                                <input class="tgl tgl-ios" id="encryption" type="checkbox" ng-checked="net.type.enable == 'yes'" ng-click="net.type.enable = (net.type.enable=='no'?'yes':'no')">
+                                <input class="tgl tgl-ios" id="encryption" type="checkbox" ng-checked="net_detail.ONBOOT == 'yes'" ng-click="net_detail.ONBOOT  = (net_detail.ONBOOT =='no'?'yes':'no')">
                                 <label class="tgl-btn" for="encryption"></label>
                             </div>
                         </div>
                     </div>
-                    <div class="form-group row item_form" ng-if="net.type.enable == 'yes'">
+                    <div class="form-group row item_form" ng-if="net_detail.ONBOOT  == 'yes'">
                         <label for="port" class="col-sm-1 control-label" style="min-width:130px">获取IP方式</label>
                         <div class="col-sm-3" style="max-width: 230px">
-                            <select class="form-control input_radius" style="background-color: #fff;" ng-model="net.type.ip_type" ng-options="x.num as x.type for x in ip_type"></select>
+                            <select class="form-control input_radius" style="background-color: #fff;" ng-model="net_detail.BOOTPROTO" ng-options="x.type as x.name for x in ip_type"></select>
                         </div>
                     </div>
-                    <div class="form-group row item_form" ng-if="net.type.enable == 'yes' && net.type.ip_type == 1">
+                    <div class="form-group row item_form" ng-if="net_detail.ONBOOT  == 'yes' && net_detail.BOOTPROTO == 'static'">
                         <label for="port" class="col-sm-1 control-label" style="min-width:130px">IP地址</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control item_input" id="ip_addr" placeholder="" ng-model="net.data.ip_addr">
+                            <input type="text" class="form-control item_input" id="ip_addr" placeholder="" ng-model="net_detail.IPADDR">
                         </div>
                     </div>
-                    <div class="form-group row item_form" ng-if="net.type.enable == 'yes' && net.type.ip_type == 1">
+                    <div class="form-group row item_form" ng-if="net_detail.ONBOOT  == 'yes' && net_detail.BOOTPROTO == 'static'">
                         <label for="port" class="col-sm-1 control-label" style="min-width:130px">子网掩码</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control item_input" id="sub_net" placeholder="" ng-model="net.data.sub_net">
+                            <input type="text" class="form-control item_input" id="sub_net" placeholder="" ng-model="net_detail.MASK">
                         </div>
                     </div>
-                    <div class="form-group row item_form" ng-if="net.type.enable == 'yes' && net.type.ip_type == 1">
+                    <div class="form-group row item_form" ng-if="net_detail.ONBOOT  == 'yes' && net_detail.BOOTPROTO == 'static'">
                         <label for="port" class="col-sm-1 control-label" style="min-width:130px">默认网关</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control item_input" id="default_gateway" placeholder="" ng-model="net.data.default_gateway">
+                            <input type="text" class="form-control item_input" id="default_gateway" placeholder="" ng-model="net_detail.GATEWAY">
                         </div>
                     </div>
-                    <div class="form-group row item_form" ng-if="net.type.enable == 'yes' && net.type.ip_type == 1">
+                    <div class="form-group row item_form" ng-if="net_detail.ONBOOT  == 'yes' && net_detail.BOOTPROTO == 'static'">
                         <label for="port" class="col-sm-1 control-label" style="min-width:130px">首选DNS服务器</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control item_input" id="first_dns" placeholder="" ng-model="net.data.first_dns">
+                            <input type="text" class="form-control item_input" id="first_dns" placeholder="" ng-model="net_detail.DNS1">
                         </div>
                     </div>
-                    <div class="form-group row item_form" ng-if="net.type.enable == 'yes' && net.type.ip_type == 1">
+                    <div class="form-group row item_form" ng-if="net_detail.ONBOOT == 'yes' && net_detail.BOOTPROTO == 'static'">
                         <label for="port" class="col-sm-1 control-label" style="min-width:130px">备用DNS服务器</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control item_input" id="spare_dns" placeholder="" ng-model="net.data.spare_dns">
+                            <input type="text" class="form-control item_input" id="spare_dns" placeholder="" ng-model="net_detail.DNS2">
                         </div>
                     </div>
                     <div class="row">
