--- a/src/pages/alarm/alarm.html
+++ b/src/pages/alarm/alarm.html
@@ -66,7 +66,7 @@
                                     <td ng-bind="item.indicator"></td>
                                     <td ng-bind="item.src_ip"></td>
                                     <td ng-bind="item.dest_ip"></td>
-                                    <td ng-bind="item.application"></td>
+                                    <td ng-bind="item.application == 'tls'? 'https': item.application"></td>
                                     <td ng-bind="item.degree"></td>
                                     <td class="overflow_alarm">
                                         <div class="btn-group {{(ariaID == item.id)?'open':''}}">
