--- a/src/pages/overview/overview.html
+++ b/src/pages/overview/overview.html
@@ -210,7 +210,7 @@
                                 <td ng-bind="item.indicator"></td>
                                 <td ng-bind="item.src_ip"></td>
                                 <td ng-bind="item.dest_ip"></td>
-                                <td ng-bind="item.application"></td>
+                                <td ng-bind="item.application == 'tls'? 'https': item.application"></td>
                                 <td ng-bind="item.degree"></td>
                             </tr>
                         </table>
