--- a/tpl/blocks/page_footer.html
+++ b/tpl/blocks/page_footer.html
@@ -1,3 +1,3 @@
 <p>
-  <small class="text-muted">Web app framework base on Bootstrap and AngularJS<br>&copy; 2014</small>
+  <small class="text-muted">1111111111<br>&copy; 2014</small>
 </p>
